--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,32 @@
 version: '1'
 
 services:
+  next-frontend:
+    build: ./app/next-frontend
+    container_name: next_frontend
+    ports:
+      - 3000:3000
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:8000/api
+    volumes:
+      - ./app/next-frontend:/app
+    depends_on:
+      - nest-backend
+  
+  nest-backend:
+    build: ./app/nest-backend
+    container_name: nest_backend
+    ports:
+      - 8080:8080
+    environment:
+      - DATABASE_URL=postgresql://user:postgres@db:5432/postgres
+    volumes:
+      - ./app/nest-backend:/app
+    depends_on:
+      - db
+
   db:
-    build: ./docker/postgres-db
+    build: ./postgres-db
     container_name: postgres_pta
     ports:
       - 5432:5432
