--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,26 @@ version: '1'
 
 services:
   next-frontend:
-    build: ./app/next-frontend
+    build: ./next-frontend
     container_name: next_frontend
     ports:
       - 3000:3000
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:8000/api
     volumes:
-      - ./app/next-frontend:/app
+      - ./next-frontend:/app
     depends_on:
       - nest-backend
   
   nest-backend:
-    build: ./app/nest-backend
+    build: ./nest-backend
     container_name: nest_backend
     ports:
       - 8080:8080
     environment:
       - DATABASE_URL=postgresql://user:postgres@db:5432/postgres
     volumes:
-      - ./app/nest-backend:/app
+      - ./nest-backend:/app
     depends_on:
       - db
 
